<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="@color/teal_700"
    android:padding="2dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Reference Number(id) Fields        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_ref_num_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/referenceNumber"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_marginStart="8dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_ref_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                tools:text="Ref num" />
        </LinearLayout>

        <!-- Date Fields        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_date_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_marginStart="8dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                tools:text="2021-10-29" />
        </LinearLayout>

        <!-- Vehicle Name Fields        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_vehicle_name_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/vehicle_name_lbl_cd"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_marginStart="8dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_vehicle_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                tools:text="Vehicle Name" />
        </LinearLayout>

        <!-- Cost Fields        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_cost_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cost"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_marginStart="8dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                tools:text="Cost: " />
        </LinearLayout>

        <!-- Cost per mile Fields        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_cpm_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cpm"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_marginStart="8dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_cpm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                tools:text="Cost Per Mile: " />
        </LinearLayout>

        <!-- Fuel Type Fields        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_fuel_type_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fuelType"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_marginStart="8dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_fuel_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                tools:text="Fuel Type" />
        </LinearLayout>

        <!-- Gallons Fields        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_gallons_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallons"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_marginStart="8dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_gallons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                tools:text="gallons" />
        </LinearLayout>

        <!-- Price Per Gallon Fields        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_ppg_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_marginStart="8dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_ppg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                tools:text="Vehicle Name" />
        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>
